--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content=">Mini Survey Project" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>Mini Survey Project</title>
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.5/dist/web/static/pretendard.css"
+    />
+
+    <title>Mini Surveys</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
